# epic

./: .gitignore  .zenodo.json  CHANGELOG.md  LICENSE  Makefile.am  README.md  bootstrap  config.nml  configure.ac  constants.f90  convention.txt  convert_fields.py  epic.f90  epic_mean.py  h5_to_nc.py  init.f90  makefile  model.f90  parameters.f90  parser.f90  requirements.txt  robert.config  robert.nml  robert2d-one-gaussian.nml  robert2d-one-uniform.nml  robert2d-two-gaussians.nml  robert2d.nml  rt_64x64x64.nc  straka.config  straka2d.nml  taylor_green.config  taylorgreen2d.nml  taylorgreen2d_ls_rk4.nml  third_order_conversion.py  types.f90
analyse/: Makefile.am  genspec.f90  genspec3d.f90
analyse/2d/: Makefile.am  genspec2d.f90
analyse/3d/: Makefile.am  coarsen.f90  genspec3d.f90
models/: Makefile.am  epic2d-models.f90  models.f90  options.f90  robert.f90  robert2d-one-gaussian.nml  robert2d-two-gaussians.nml  straka.f90  straka2d.nml  taylorgreen.f90
models/2d/: Makefile.am  epic2d-models.f90  robert_2d.f90  straka_2d.f90  taylor_green_2d.f90  taylorgreen_2d.f90
models/3d/: Makefile.am  beltrami_3d.f90  epic3d-models.f90  moist_3d.f90  mpic_3d.f90  robert_3d.f90  taylor_green_3d.f90  taylorgreen_3d.f90
mpi-tests/: Makefile.am  benchmark2_parcel_merging.f90  benchmark_parcel_merging.f90  parcel_merge_serial.f90  parcel_nearest_serial.f90  test_merging_parcels.f90  test_merging_parcels_serial.f90  test_moving_parcels.f90  test_nearest_algorithm.py  test_parcel_merge_random.f90  test_parcel_moving_equidistant.f90  test_parcel_moving_random.f90  test_parcel_split_merge.f90  test_parcel_split_random.f90  test_utils.f90  verify_nearest_algorithm.py  verify_parcel_merging.f90
python-scripts/: Makefile.am  animate-ellipses.py  animate-parcels.py  bokeh-parcels.py  bomex_fluxes.py  bomex_with_fluxes.py  compare_results.py  merge-ellipses.py  merge_ellipses.py  plot-diagnostics.py  plot-ellipses.py  plot-fields.py  plot-mergers.py  plot-parcels.py  plot-timings.py  plot_slices.py  plot_time_convergence.py  subgrid_2d_generalised.py  surface_fluxes.py
python-scripts/animate/: ellipse_animation.py
python-scripts/tools/: Makefile.am  __init__.py  bokeh_plots.py  bokeh_style.py  colors.py  draw.py  epic_config.py.in  geometry.py  h5_fields.py  h5_reader.py  monc_reader.py  mpl_beautify.py  mpl_style.py  nc_base_reader.py  nc_fields.py  nc_parcels.py  nc_reader.py  nc_utils.py  plot_beautify.py  plot_style.py  plots.py  pmpic_reader.py  subgrid_2d_generalised.py  units.py  utils.py
src/: Makefile.am  constants.f90  diagnostics.f90  epic.f90  fields.f90  init.f90  model.f90  options.f90  parameters.f90  taylorgreen.f90  tri_inversion.f90  types.f90  writer.f90
src/2d/: Makefile.am  config.f90  epic2d.f90  tri_inversion.f90
src/3d/: Makefile.am  epic3d.f90  epic_fft.f90
src/fft/: Makefile.am  epic_fft.f90  fft_deprecated.f90  fft_pencil.f90  pencilfft.f90  sta2dfft.f90  sta3dfft.f90  stafft.f90
src/fields/: field_bc.f90  field_diagnostics.f90  field_hdf5.f90  fields.f90
src/hdf5/: Makefile.am  h5_reader.f90  h5_utils.f90  h5_writer.f90
src/interpolation/: interpl_methods.f90  interpolation.f90
src/models/: model.f90  models.f90  robert.f90  straka.f90  taylorgreen.f90
src/mpi/: Makefile.am  mpi_collectives.f90  mpi_communicator.f90  mpi_datatypes.f90  mpi_environment.f90  mpi_halo.f90  mpi_layout.f90  mpi_ops.f90  mpi_p2p.f90  mpi_reverse.f90  mpi_reverse2d.f90  mpi_tags.f90  mpi_timer.f90  mpi_utils.f90
src/netcdf/: Makefile.am  netcdf_dimensions.f90  netcdf_reader.f90  netcdf_utils.f90  netcdf_writer.f90
src/parcels/: ellipse.f90  merge_hdf5.f90  nearest.f90  parcel_bc.f90  parcel_container.f90  parcel_correction.f90  parcel_diagnostics.f90  parcel_diverge.f90  parcel_ellipse.f90  parcel_ellipsoid.f90  parcel_hdf5.f90  parcel_init.f90  parcel_interpl.f90  parcel_merge.f90  parcel_nearest.f90  parcel_point.f90  parcel_split.f90  parcels.f90
src/parser/: parser.f90
src/stepper/: classic_rk4.f90  ls_rk4.f90  rk4.f90  rk4_utils.f90
src/utils/: Makefile.am  ape_density.f90  armanip.f90  config.f90  constants.f90  datatypes.f90  deriv1d.f90  diagnostics.f90  diagnostics_hdf5.f90  h5_utils.f90  init.f90  iomanip.f90  jacobi.f90  linalg.f90  macros.f90  merge_sort.f90  options.f90  parameters.f90  parser.f90  phys_constants.f90  phys_parameters.f90  physical_constants.f90  physical_parameters.f90  physics.f90  reader.f90  scherzinger.f90  sta2dfft.f90  stafft.f90  timer.f90  utils.f90  writer.f90
unit-tests/: Makefile.am  ellipse_orientation.f90  free_slip.f90  permute.f90  run_unit_tests.sh  test_diverge.f90  test_diverge_gradient.f90  test_ellipse_bi_merge.f90  test_ellipse_bi_vs_multi_merge.f90  test_ellipse_merge.f90  test_ellipse_merge_1.f90  test_ellipse_merge_2.f90  test_ellipse_merge_3.f90  test_ellipse_merge_4.f90  test_ellipse_merge_5.f90  test_ellipse_merge_symmetry.f90  test_ellipse_multi_merge.f90  test_ellipse_multi_merge_1.f90  test_ellipse_multi_merge_2.f90  test_ellipse_multi_merge_3.f90  test_ellipse_multi_merge_4.f90  test_ellipse_multi_merge_5.f90  test_ellipse_multi_merge_symmetry.f90  test_ellipse_orientation.f90  test_ellipse_reflection.f90  test_ellipse_split.f90  test_fft_1.f90  test_fft_2.f90  test_free_slip.f90  test_gradient_correction.f90  test_jacobi.f90  test_jacobi_3.f90  test_laplace_correction.f90  test_nearest_1.f90  test_nearest_2.f90  test_nearest_3.f90  test_nearest_4.f90  test_parcel_correction.f90  test_parcel_init.f90  test_tri_inversion.f90  (+2 more)
unit-tests/2d/: Makefile.am  test_bilinear.f90  test_ellipse_merge_1.f90  test_ellipse_merge_2.f90  test_ellipse_merge_3.f90  test_ellipse_merge_4.f90  test_ellipse_merge_symmetry.f90  test_ellipse_orientation.f90  test_ellipse_reflection.f90  test_ellipse_split.f90  test_fft_1.f90  test_fft_2.f90  test_free_slip.f90  test_gradient_correction.f90  test_laplace_correction.f90  test_nearest_1.f90  test_nearest_2.f90  test_nearest_3.f90  test_nearest_4.f90  test_parcel_correction.f90  test_parcel_init.f90  test_tri_diverge.f90  test_tri_inversion.f90
unit-tests/3d/: B.asc  (+112 more)
(+260 files in other folders)
